<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity"
    android:background="@drawable/gardient_drawable"
    >

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        >

        <AutoCompleteTextView
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_login"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="enter password"
            android:hint="@string/password_login_text"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_text"
            android:gravity="center"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/create_account_text"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

    </LinearLayout>
</LinearLayout>