<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/gardient_drawable"
    tools:context=".CreateAccountActivity">


    <ProgressBar
        android:id="@+id/account_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/email_create_account_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/username_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="enter username"
            android:hint="@string/username_text"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:minHeight="48dp" />

        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email_login"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="enter password"
            android:hint="@string/password_login_text"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/createAccountButton_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/create_account_text"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

</LinearLayout>