<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:gravity="center"
    android:background="@drawable/gardient_drawable"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_page_title_text"
        android:textSize="36sp"
        android:paddingStart="10dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/relativeLaout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_page_text"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/main_get_started_button"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

</LinearLayout>