<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".PostUpdateJournalActivity"
    android:background="@drawable/gardient_drawable">

    <ImageView
        android:id="@+id/post_update_imageView"
        android:layout_width="387dp"
        android:layout_height="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/add_image_text"/>

    <ImageView
        android:id="@+id/postupdateCameraButton"
        android:layout_width="78dp"
        android:layout_height="74dp"
        app:layout_constraintBottom_toBottomOf="@+id/post_update_imageView"
        app:layout_constraintEnd_toEndOf="@+id/post_update_imageView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/post_update_imageView"
        app:layout_constraintTop_toTopOf="@+id/post_update_imageView"
        app:layout_constraintVertical_bias="0.365"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/add_image_button_text"/>

    <TextView
        android:id="@+id/post_update_username_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/post_update_imageView"
        app:layout_constraintStart_toStartOf="@+id/post_update_imageView"
        app:layout_constraintTop_toBottomOf="@+id/postupdateCameraButton"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/post_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/today_text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/post_update_imageView"
        app:layout_constraintTop_toBottomOf="@+id/post_update_username_textview" />

    <EditText
        android:id="@+id/post_update_title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:autofillHints="enter title"
        android:ems="10"
        android:hint="@string/title_text"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#263238"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_update_imageView" />

    <EditText
        android:id="@+id/post_update_thoughts_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="enter thoughts"
        android:ems="10"
        android:hint="@string/thoughts_text"
        android:textColorHint="@color/black"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_update_title_et" />

    <Button
        android:id="@+id/postUpdatesaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:background="@android:color/transparent"
        android:text="@string/save_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_update_thoughts_et" />

    <ProgressBar
        android:id="@+id/post_update_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="79dp"
        android:layout_height="88dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />

</androidx.constraintlayout.widget.ConstraintLayout>